--- a/res/layout-land/compass_calibrate_example.xml
+++ b/res/layout-land/compass_calibrate_example.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
-  xmlns:android="http://schemas.android.com/apk/res/android">
+  xmlns:android="http://schemas.android.com/apk/res/android" android:background="#000000">
     <LinearLayout android:orientation="horizontal" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
         <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="40.0">
             <TextView android:gravity="left" android:id="@id/inst_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/calibrator_ani_inst" style="\?android:attr/textAppearanceMedium" />
